--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,12 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
     <uses-feature android:name="android.hardware.camera" />
 
 
@@ -20,11 +23,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BookReturnReminder"
         tools:targetApi="31">
-        <service
-            android:name=".service.IBeaconMonitoringService"
-            android:foregroundServiceType="location"
-            android:permission="android.permission.BIND_JOB_SERVICE"
-            tools:ignore="ForegroundServicePermission" />
+
         <receiver android:name=".service.BookReminderBroadcastReceiver" />
         <activity
             android:name=".MainActivity"
@@ -42,6 +41,12 @@
             android:name=".BarcodeScanningActivity"
             android:exported="true" />
 
+        <service
+            android:name=".service.IBeaconMonitoringService"
+            android:enabled="true"
+            android:exported="true"
+            android:foregroundServiceType="location"
+            tools:ignore="ForegroundServicePermission" />
 
 
     </application>
