--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,11 @@ constraintlayout = "2.1.4"
 roomRuntime = "2.6.1"
 cameraView = "1.3.3"
 cameraLifecycle = "1.3.3"
+playServicesLocation = "21.0.1"
+androidxWorkRuntimeKtx = "2.8.0"
+androidBeaconLibrary = "2.19.3"
+androidxLifecycleService = "2.6.1"
+coreKtxV160 = "1.6.0"
 
 [libraries]
 androidx-camera-camera2 = { module = "androidx.camera:camera-camera2", version.ref = "cameraView" }
@@ -38,6 +43,11 @@ androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifec
 kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutines" }
 androidx-camera-view = { group = "androidx.camera", name = "camera-view", version.ref = "cameraView" }
 androidx-camera-lifecycle = { group = "androidx.camera", name = "camera-lifecycle", version.ref = "cameraLifecycle" }
+play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
+androidx-work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "androidxWorkRuntimeKtx" }
+android-beacon-library = { group = "org.altbeacon", name = "android-beacon-library", version.ref = "androidBeaconLibrary" }
+androidx-lifecycle-service = { group = "androidx.lifecycle", name = "lifecycle-service", version.ref = "androidxLifecycleService" }
+androidx-core-ktx-v160 = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtxV160" }
 
 
 [plugins]
